@startuml

title __HOME's Class Diagram__\n

  namespace com.example.edelhome {
    namespace ui.home {
      class com.example.edelhome.ui.home.HomeFragment {
          - textView : TextView
          + onCreateView()
      }
    }
  }
  

  namespace com.example.edelhome {
    namespace ui.home {
      class com.example.edelhome.ui.home.HomeViewModel {
          - imageView : ImageView
          - mText : MutableLiveData<String>
          + HomeViewModel()
          + getText()
      }
    }
  }
  

  com.example.edelhome.ui.home.HomeFragment -up-|> androidx.fragment.app.Fragment
  com.example.edelhome.ui.home.HomeFragment o-- com.example.edelhome.ui.home.HomeViewModel : homeViewModel
  com.example.edelhome.ui.home.HomeViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
